2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: Fix references to prototypes to not include a
	trailing colon.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* .x-sc_prohibit_magic_number_exit: Whitelist utils/*.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (rand): Take an additional argument in the
	stack for the seed.
	* libpoke/pkl-rt.pk (rand): Redefine the builtin `rand' to take an
	optional argument for the seed.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Likewise.
	* doc/poke.texi (rand): New section.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/elfextractor: New file.
	* HACKING (Poke Utilities): New section.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (From Bytes to Integers): Reflect new syntax for
	bit-concatenation.
	(Big and Little Endians): Likewise.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Unions): Note about placing most common
	alternatives first in unions.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (primary): Allow funcall statements.
	* testsuite/poke.pkl/funcall-15.pk: New test.
	* testsuite/poke.pkl/funcall-16.pk: Likewise.
	* doc/poke.texi (Calling Functions): Document that the funcall
	alternative syntax can be used in expressions.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ops.def: Remove unused ELEMSOF and TYPEOF operator
	definitions.

2020-07-18  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Casting Structs): Expand a little.

2020-07-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks: Remove obsolete comments.
	* libpoke/pkl-tab.y (INTEGER): Likewise.
	(identifier): Likewise.
	* libpoke/pk-val.c: Likewise.

2020-07-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure during "make distcheck".
	* testsuite/Makefile.am (EXTRA_DIST): Remove all directories. Add
	individual files instead.